# fastapi

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.shared.yml  docker-compose.yml  pyproject.toml  ruff.toml
app/db/: base.py  base_class.py  session.py
app/models/: test.py
app/repository/: base_repository.py  test_repository.py
app/schemas/: test.py
migrations/: env.py
migrations/versions/: 2023-10-06_create_tests_table.py
scripts/: run_uvicorn.sh
